<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rescue Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_circle_contact">Add Contact</string>
    <string name="title_activity_rescue_me_main_view">Rescue Me</string>
    <string name="email">Email</string>
    <string name="name_hint">Name</string>
    <string name="password">Password</string>
    <string name="number">Phone Number</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="notYet">Not Registered yet ?</string>
    <string name="personal_msg">Rescue Message</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="or">Or Log In With</string>
    <string name="app_id">822228331163024</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rescue_me_utils">Rescue Me Utils</string>
    <string name="title_activity_rescue_me_util">Rescue Me Utils</string>
    <string name="update_contact">Update</string>
    <string name="delete_emergency_contact">Delete Contact</string>
    <string name="refresh_profile">Refresh Profile</string>
    <string name="tap_to_send">Tap to send message with your Location details to your Emergency Contacts</string>
    <string name="connect_fb">Connect to FaceBook for Profile Picture</string>
    <string name="update_profile">Update</string>
    <string name="finish_editing_profile">Done Editing</string>
    <string name="panic_btn_desc">Panic Button</string>
    <string name="local_contacts">Local Contacts</string>
    <string name="fb_contacts">Facebook Friends</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="profile_desc">Profile Picture</string>
    <string name="discard_contact">Discard contact</string>
    <string name="rescueme_tag">Rescue Me</string>
    <string name="custom_message">Custom Rescue Me Message</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_email">Send Email</string>
    <string name="send_push">Send Push Notifications</string>
    <string name="rescuer">Rescuer</string>
    <string name="receive_sms">Receive SMS</string>
    <string name="receive_email">Receive Email</string>
    <string name="receive_push">Receive Push</string>
    <string name="send_alert_with_in">Send Alerts With In</string>
    <string name="receive_alert_view">Receive Alerts With In</string>
    <string name="are_you_a_rescuer">Are you a Rescuer</string>
    <string name="fb_login_btn">FaceBook Login Button</string>
    <string name="g_plus_login_btn">Google Plus Login Button</string>
    <string name="app_icon">App Icon</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="panic_btn">Panic Button</string>
    <string name="edit_profile_btn">Edit Profile Button</string>
    <string name="seekbar_value_hint">value</string>
    <string name="social_connections">Social Connections</string>
    <string name="connect_to_facebook">Connect To FaceBook</string>
    <string name="connect_to_g_plus">Connect to Google Plus</string>
    <string name="title_activity_rescue_me_pop_up">Emergency POP-UP</string>
    <string name="pop_up_message_hint">Message</string>
    <string name="title_activity_rescue_me_maps">Map</string>
    <string name="push_loc_updates">Push Location Updates</string>

</resources>
