<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.rescueme.RescueMeTabViewer">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout" />

    <item
        android:id="@+id/add_circle_contact"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_add_circle_contact"
        android:visible="false" />

    <item
        android:id="@+id/refreshProfile"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh_profile"
        android:visible="false" />

    <item
        android:id="@+id/updateProfile"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/update_profile"
        android:visible="false" />

    <item
        android:id="@+id/doneEditing"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="ifRoom"
        android:title="@string/finish_editing_profile"
        android:visible="false" />

</menu>
