<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffebecee">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="phone" />

    <Button
        android:id="@+id/addContactBtn"

        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_alignEnd="@+id/phoneNumber"

        android:layout_alignLeft="@+id/phoneNumber"
        android:layout_alignRight="@+id/phoneNumber"
        android:layout_alignStart="@+id/phoneNumber"
        android:layout_below="@+id/phoneNumber"
        android:layout_marginTop="51dp"
        android:layout_toStartOf="@+id/loginRegisterBtn"
        android:background="@drawable/button_large_selector"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/action_add_circle_contact"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</RelativeLayout>