<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.rescueme.RescueMeUpdateProfile">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:clickable="true"
        android:maxHeight="500dp"
        android:maxWidth="400dp"
        android:src="@drawable/default_profile_pic" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profilePic"
        android:layout_alignRight="@+id/profilePic"
        android:layout_below="@+id/profilePic"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_alignRight="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/personalMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumber"
        android:layout_alignRight="@+id/phoneNumber"
        android:layout_below="@+id/phoneNumber"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/personal_msg"
        android:inputType="textMultiLine" />

</RelativeLayout>
