<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffebecee">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#75060505"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/profile_desc"
                android:src="@drawable/default_profile_pic" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="left|right"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:showDividers="beginning"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal|fill_vertical"
                android:hint="@string/name_hint"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:gravity="center_horizontal|fill_vertical"
                android:hint="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="false"
                android:textSize="12sp"
                android:textStyle="italic" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_toRightOf="@+id/linearLayout2"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/editProfile"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.37"
            android:background="@null"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/profile_edit"
            android:src="@drawable/ic_action_edit" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
